Update db, add percision, implement worker, simplify calls

--- a/cryptotracker.webapi/appsettings.json
+++ b/cryptotracker.webapi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "server=192.168.0.165;database=testdb;user=root;password=strong_password;"
+    "DbConnection": "server=192.168.0.165;database=cryptotracker;user=root;password=strong_password;"
   },
   "AllowedHosts": "*"
 }
