add basic sveltekit app as frontend

--- a/cryptotracker.webapi/cryptotracker.webapi.csproj
+++ b/cryptotracker.webapi/cryptotracker.webapi.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <SpaRoot>..\cryptotracker.web</SpaRoot>
+    <SpaProxyLaunchCommand>npm run dev -- --host</SpaProxyLaunchCommand>
+    <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.8" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
 
