--- a/cryptotracker.webapi/appsettings.json
+++ b/cryptotracker.webapi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "server=192.168.0.165;database=cryptotracker;user=root;password=strong_password;"
+    "DbConnection": "server=192.168.0.165;database=cryptotracker;user=cryptotracker;password=tOpvw1HpM4N0Ia78tM4NdT69;"
   },
   "AllowedHosts": "*"
 }
