--- a/cryptotracker.core/cryptotracker.core.csproj
+++ b/cryptotracker.core/cryptotracker.core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CardanoSharp.Wallet" Version="5.1.0" />
     <PackageReference Include="CryptoClients.Net" Version="2.7.1" />
     <PackageReference Include="NBitcoin" Version="7.0.46" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
