--- a/cryptotracker.web/package.json
+++ b/cryptotracker.web/package.json
@@ -18,7 +18,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.20.4",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tailwindcss/postcss": "^4.1.3",
+		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
@@ -29,12 +29,12 @@
 		"lucide-svelte": "^0.469.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.25.9",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^4.1.3",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11"
