--- a/cryptotracker.web/package.json
+++ b/cryptotracker.web/package.json
@@ -15,11 +15,12 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.20.4",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.22.2",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/postcss": "^4.1.11",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.22.0",
+		"bits-ui": "^2.8.10",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
@@ -27,10 +28,11 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.469.0",
+		"oazapfts": "^6.1.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.13",
-		"svelte": "^5.25.9",
+		"svelte": "^5.34.9",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
@@ -40,7 +42,6 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.6",
-		"oazapfts": "^6.1.0"
+		"@sveltejs/adapter-static": "^3.0.8"
 	}
 }
