implement OIDC and user provisioning

--- a/config/example-config.yml
+++ b/config/example-config.yml
@@ -9,3 +9,7 @@ integrations:
     key: key
     secret: secret
     description: description
+oidc:
+  clientid: your_client_id
+  clientsecret: your_client_secret
+  authority: https://your-oidc-provider.com
