--- a/cryptotracker.webapi/cryptotracker.webapi.csproj
+++ b/cryptotracker.webapi/cryptotracker.webapi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CryptoClients.Net" Version="2.7.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.19" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
