--- a/cryptotracker.web/package.json
+++ b/cryptotracker.web/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -16,30 +16,30 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/kit": "^2.46.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/postcss": "^4.1.11",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^2.8.10",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"lucide-svelte": "^0.469.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.12.4",
+		"globals": "^16.4.0",
+		"lucide-svelte": "^0.545.0",
 		"oazapfts": "^6.1.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"svelte": "^5.34.9",
 		"svelte-check": "^4.0.0",
-		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^4.1.11",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
+		"tailwindcss": "^4.1.14",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.4.11"
+		"vite": "^7.1.9"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8"
