--- a/cryptotracker.web/package.json
+++ b/cryptotracker.web/package.json
@@ -15,12 +15,13 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.544.0",
 		"@sveltejs/kit": "^2.46.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/postcss": "^4.1.11",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^2.8.10",
+		"bits-ui": "^2.14.1",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
